@@ -8,6 +8,7 @@
   * Added a new optional ~:action-filter~ argument when defining LSP clients that allows code action requests to be modified before they are sent to the server. This is used by the Haskell language server client to work around an ~lsp-mode~ parsing quirk that incorrectly sends ~null~ values instead of ~false~ in code action requests.
   * Add support for C# via the [[https://github.com/dotnet/roslyn/tree/main/src/LanguageServer][Roslyn language server]].
   * Add basic support for [[https://microsoft.github.io/language-server-protocol/specifications/lsp/3.17/specification/#textDocument_pullDiagnostics][pull diagnostics]] requests.
+  * Add ~lsp-flush-delayed-changes-before-next-message~ customization point to enforce throttling document change notifications.
 
 ** 9.0.0
   * Add language server config for QML (Qt Modeling Language) using qmlls.
